# ai-service

./: .dockerignore  .env.example  .gitignore  ANSIBLE_DEPLOYMENT_OVERVIEW.md  ANSIBLE_UPDATE_SUMMARY.md  CLAUDE.md  Dockerfile  Dockerfile.gpu  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  TWO_STAGE_UPLOAD_FLOW.md  WORKERS_IMPLEMENTATION.md  entrypoint.sh  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: dev.yml  prod.yml  stg.yml
ansible/: .env.example  Caddyfile.j2  README.md  ansible.cfg  deploy.yml  docker-compose.yml.j2  setup.sh
ansible/group_vars/: production.yml.template
ansible/inventory/: production.ini.template
docker/: .env.example  Caddyfile  docker-compose.base.yml  docker-compose.yml  init.sql
docs/: create-base-exam.md  document-extraction-note.md  document_extraction_prompt.md  exam-generation-req.json  exam-generation.res.json  generate-base-exam-bl.md  inspected_ocr_data.txt  missing_questions_case.json  question_with_subq_case.json  questions-extraction-flow.md  sample_res.json  select_group_greedy.md  select_group_greedy_example.md  simple.json  validated_content.md
docs/genai/: genai.md  google-genai-embedding.md  ollama.md
docs/manual/: document-etl-flow-vi.md  entities.md  exam-generation-flow.md  exam-taking-suggested-flow.md  (+1 more)
scripts/: build_image.ps1  create_db.sql  generate_excel.py  generate_grpc.py  generate_grpc.sh  paddleocr_quick_test.py  ppstructure_quick_test.py  setup.py  yolov8_quick_test.py
src/: app.py  cli.py  container.py  settings.py  worker.py
tests/: test_latex_normalizer.py
(+224 files in other folders)
